iptables
# Generated by iptables-save v1.4.7 on Tue Jul 29 03:08:25 2014
*mangle
:PREROUTING ACCEPT [246845:74232414]
:INPUT ACCEPT [205487:55121915]
:FORWARD ACCEPT [992:89959]
:OUTPUT ACCEPT [152509:50694573]
:POSTROUTING ACCEPT [153499:50783904]
:nova-api-POSTROUTING - [0:0]
-A POSTROUTING -j nova-api-POSTROUTING 
COMMIT
# Completed on Tue Jul 29 03:08:25 2014
# Generated by iptables-save v1.4.7 on Tue Jul 29 03:08:25 2014
*nat
:PREROUTING ACCEPT [4741:1728563]
:POSTROUTING ACCEPT [34:2088]
:OUTPUT ACCEPT [44:2760]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-POSTROUTING - [0:0]
:neutron-openvswi-PREROUTING - [0:0]
:neutron-openvswi-float-snat - [0:0]
:neutron-openvswi-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-openvswi-PREROUTING 
-A PREROUTING -j nova-api-PREROUTING 
-A POSTROUTING -s 10.4.200.0/24 -j MASQUERADE 
#-A POSTROUTING -s 10.4.200.0/24 ! -d 10.4.200.0/24 -j MASQUERADE 
-A POSTROUTING -j neutron-openvswi-POSTROUTING 
-A POSTROUTING -j neutron-postrouting-bottom 
-A POSTROUTING -j nova-api-POSTROUTING 
-A POSTROUTING -j nova-postrouting-bottom 
-A OUTPUT -j neutron-openvswi-OUTPUT 
-A OUTPUT -j nova-api-OUTPUT 
-A neutron-openvswi-snat -j neutron-openvswi-float-snat 
-A neutron-postrouting-bottom -j neutron-openvswi-snat 
-A nova-api-snat -j nova-api-float-snat 
-A nova-postrouting-bottom -j nova-api-snat 
COMMIT
# Completed on Tue Jul 29 03:08:25 2014
# Generated by iptables-save v1.4.7 on Tue Jul 29 03:08:25 2014
*filter
:INPUT ACCEPT [13623:3428762]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [10076:3014583]
:neutron-filter-top - [0:0]
:neutron-openvswi-FORWARD - [0:0]
:neutron-openvswi-INPUT - [0:0]
:neutron-openvswi-OUTPUT - [0:0]
:neutron-openvswi-iff446845-9 - [0:0]
:neutron-openvswi-local - [0:0]
:neutron-openvswi-off446845-9 - [0:0]
:neutron-openvswi-sff446845-9 - [0:0]
:neutron-openvswi-sg-chain - [0:0]
:neutron-openvswi-sg-fallback - [0:0]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j neutron-openvswi-INPUT 
-A INPUT -j nova-api-INPUT 
-A FORWARD -o br-ex -j ACCEPT 
-A FORWARD -i br-ex -j ACCEPT 
-A FORWARD -j neutron-filter-top 
-A FORWARD -j neutron-openvswi-FORWARD 
-A FORWARD -j nova-filter-top 
-A FORWARD -j nova-api-FORWARD 
-A OUTPUT -j neutron-filter-top 
-A OUTPUT -j neutron-openvswi-OUTPUT 
-A OUTPUT -j nova-filter-top 
-A OUTPUT -j nova-api-OUTPUT 
-A neutron-filter-top -j neutron-openvswi-local 
-A neutron-openvswi-FORWARD -m physdev --physdev-out tapff446845-98 --physdev-is-bridged -j neutron-openvswi-sg-chain 
-A neutron-openvswi-FORWARD -m physdev --physdev-in tapff446845-98 --physdev-is-bridged -j neutron-openvswi-sg-chain 
-A neutron-openvswi-INPUT -m physdev --physdev-in tapff446845-98 --physdev-is-bridged -j neutron-openvswi-off446845-9 
-A neutron-openvswi-iff446845-9 -m state --state INVALID -j DROP 
-A neutron-openvswi-iff446845-9 -m state --state RELATED,ESTABLISHED -j RETURN 
-A neutron-openvswi-iff446845-9 -p tcp -m tcp --dport 22 -j RETURN 
-A neutron-openvswi-iff446845-9 -p icmp -j RETURN 
-A neutron-openvswi-iff446845-9 -s 10.5.5.3/32 -p udp -m udp --sport 67 --dport 68 -j RETURN 
-A neutron-openvswi-iff446845-9 -j neutron-openvswi-sg-fallback 
-A neutron-openvswi-off446845-9 -p udp -m udp --sport 68 --dport 67 -j RETURN 
-A neutron-openvswi-off446845-9 -j neutron-openvswi-sff446845-9 
-A neutron-openvswi-off446845-9 -p udp -m udp --sport 67 --dport 68 -j DROP 
-A neutron-openvswi-off446845-9 -m state --state INVALID -j DROP 
-A neutron-openvswi-off446845-9 -m state --state RELATED,ESTABLISHED -j RETURN 
-A neutron-openvswi-off446845-9 -j RETURN 
-A neutron-openvswi-off446845-9 -j neutron-openvswi-sg-fallback 
-A neutron-openvswi-sff446845-9 -s 10.5.5.2/32 -m mac --mac-source FA:16:3E:C3:44:07 -j RETURN 
-A neutron-openvswi-sff446845-9 -j DROP 
-A neutron-openvswi-sg-chain -m physdev --physdev-out tapff446845-98 --physdev-is-bridged -j neutron-openvswi-iff446845-9 
-A neutron-openvswi-sg-chain -m physdev --physdev-in tapff446845-98 --physdev-is-bridged -j neutron-openvswi-off446845-9 
-A neutron-openvswi-sg-chain -j ACCEPT 
-A neutron-openvswi-sg-fallback -j DROP 
-A nova-api-INPUT -d 10.4.200.79/32 -p tcp -m tcp --dport 8775 -j ACCEPT 
-A nova-filter-top -j nova-api-local 
-A INPUT -p tcp --dport 6080 -j ACCEPT
COMMIT
# Completed on Tue Jul 29 03:08:25 2014
